welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: value or is not a member of Boolean
  if ((num%10)<=2 or (num%10)>=8){
                  ^